# weighit

./: .gitignore  99-usb-scale.rules  ANTIGRAVITY_INSTRUCTIONS.txt  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESKTOP_LAUNCHER.md  DEVELOPMENT_WORKFLOW.md  FLUTTER_QUICKSTART.md  FLUTTER_SETUP.md  KIOSK_SETUP.md  LICENSE  PERFORMANCE_TUNING.md  README.md  SETUP_AND_PUSH.md  USB_SCALE_SETUP.md  check_db_schema.py  complete_setup.sh  create_all_files.sh  deploy_to_tablet.sh  diagnose_missing_data.py  full_project_context.txt  generate_cheatsheet_pdf.py  git_push.sh  implementation_guide.md  install.md  install_desktop_launcher.sh  kiosk_setup.sh  launch.sh  list_files.py  migrate_add_other_source.py  migrate_add_temp_columns.py  migrate_add_view_logs.py  migrate_db.py  migrate_rename_temps.py  one_command_setup.sh  output.txt  pack_project.py  pyproject.toml  pytest_results.txt  (+4 more)
.github/workflows/: test.yml
.streamlit/: secrets.toml.example
docs/: volunteer_cheatsheet.html  volunteer_cheatsheet.md
src/weigh/: app.py  cli_weigh.py  dao.py  db.py  db_backend.py  directory_tree.md  font_test.py  font_test_2.py  fonts.txt  gui.py  junk.txt  launch.sh  logger_core.py  report_utils.py  scale_backend.py  schema.sql  system_time.py  test_results.txt  ttf_test.py  ui_components.py
src/weigh/.streamlit/: #secrets_template.toml#  config.toml  secrets.toml
src/weigh/assets/: style.css
tests/: conftest.py  test_cli.py  test_dao.py  test_db_init.py  test_end_to_end.py  test_logging.py  test_scale_backend.py  test_schema_integrity.py  test_sources_types.py
